[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/vhs_1.png" type="Texture" id=1]
[ext_resource path="res://assets/vhs_2.png" type="Texture" id=2]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/vhs_0.png" type="Texture" id=4]
[ext_resource path="res://scenes/VHS_Cover.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Calendar.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/VCR.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/HowToScene.gd" type="Script" id=8]
[ext_resource path="res://scenes/Register.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Money.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/bin_returns.png" type="Texture" id=11]
[ext_resource path="res://assets/bin_repairs.png" type="Texture" id=12]
[ext_resource path="res://assets/bin_trash.png" type="Texture" id=13]
[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=14]

[node name="HowToScene" type="Node2D"]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1200.0
margin_bottom = 600.0
color = Color( 0, 0.568627, 0.701961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="CanvasLayer/ColorRect"]
scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 3.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "HOW TO PLAY:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 3.0
margin_top = 81.0
margin_right = 224.0
margin_bottom = 153.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Put returned VHS tapes in the right bins. 
Charge for repairs, and charge trashed tapes as a purchase."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 67.0
margin_top = 18.0
margin_right = 220.0
margin_bottom = 75.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Sales and rentals go to the customer! Don't forget to charge them."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 4.0
margin_top = 59.0
margin_right = 219.0
margin_bottom = 86.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Double click to remove VHS covers!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 214.0
margin_top = 7.0
margin_right = 364.0
margin_bottom = 34.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Charge late fees when applicable."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 168.0
margin_top = 26.0
margin_right = 389.0
margin_bottom = 68.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Make sure they
 remembered to rewind. Charge them if they didn't!"
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 223.0
margin_top = 60.0
margin_right = 368.0
margin_bottom = 102.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Take the cover off before putting into the VCR"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 213.0
margin_top = 118.0
margin_right = 496.0
margin_bottom = 175.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Make no mistakes 
to get a daily bonus. Give discounts to increase customer loyalty."
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="CanvasLayer/ColorRect/Node2D"]
margin_left = 194.0
margin_top = 158.0
margin_right = 500.0
margin_bottom = 215.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Get to $200 and 100 loyalty at the end of the day to win!
You lose if cash goes under -$50 or if loyalty reaches 0."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return" type="Sprite" parent="CanvasLayer/ColorRect/Node2D"]
position = Vector2( 32, 144 )
z_index = 1
texture = ExtResource( 4 )

[node name="VHS_Cover_root" parent="CanvasLayer/ColorRect/Node2D/return" instance=ExtResource( 5 )]
position = Vector2( 1.90735e-06, -1.52588e-05 )
input_pickable = false
date_month = 7
date_day = 17

[node name="vhs_3" type="Sprite" parent="CanvasLayer/ColorRect/Node2D"]
position = Vector2( 49, 39 )
texture = ExtResource( 4 )

[node name="VHS_Cover_root2" parent="CanvasLayer/ColorRect/Node2D/vhs_3" instance=ExtResource( 5 )]
position = Vector2( -7.62939e-06, -1.52588e-05 )
input_pickable = false
purchase = true

[node name="repair" type="Sprite" parent="CanvasLayer/ColorRect/Node2D"]
position = Vector2( 99, 144 )
z_index = 1
texture = ExtResource( 1 )

[node name="trash" type="Sprite" parent="CanvasLayer/ColorRect/Node2D"]
position = Vector2( 160, 144 )
z_index = 1
texture = ExtResource( 2 )

[node name="vhs_4" type="Sprite" parent="CanvasLayer/ColorRect/Node2D"]
position = Vector2( 18, 39 )
texture = ExtResource( 4 )

[node name="VHS_Cover_root3" parent="CanvasLayer/ColorRect/Node2D/vhs_4" instance=ExtResource( 5 )]
position = Vector2( 1.52588e-05, 0 )
z_index = 2
input_pickable = false
rental = true

[node name="Calendar" parent="CanvasLayer/ColorRect/Node2D" instance=ExtResource( 6 )]
position = Vector2( 195, 16 )
scale = Vector2( 0.33, 0.33 )

[node name="VCR" parent="CanvasLayer/ColorRect/Node2D" instance=ExtResource( 7 )]
position = Vector2( 363, 74 )

[node name="bin_repairs" type="Sprite" parent="CanvasLayer/ColorRect/Node2D"]
position = Vector2( 96, 181 )
texture = ExtResource( 12 )

[node name="bin_returns" type="Sprite" parent="CanvasLayer/ColorRect/Node2D/bin_repairs"]
position = Vector2( -64, -3.05176e-05 )
texture = ExtResource( 11 )

[node name="bin_trash" type="Sprite" parent="CanvasLayer/ColorRect/Node2D/bin_repairs/bin_returns"]
position = Vector2( 128, 1.52588e-05 )
texture = ExtResource( 13 )

[node name="MenuButton" parent="CanvasLayer/ColorRect/Node2D" instance=ExtResource( 14 )]
margin_left = 333.0
margin_top = 185.0
margin_right = 433.0
margin_bottom = 205.0
rect_scale = Vector2( 0.66, 0.66 )
text = "BACK"

[node name="Register" parent="CanvasLayer/ColorRect/Node2D" instance=ExtResource( 9 )]
position = Vector2( 192, 80 )

[node name="Money" parent="CanvasLayer/ColorRect/Node2D/Register" instance=ExtResource( 10 )]
position = Vector2( 94, 29 )
z_index = 6
[connection signal="button_down" from="CanvasLayer/ColorRect/Node2D/MenuButton" to="." method="_on_MenuButton_button_down"]
